<resources>
  <string name="app_name">i看雪</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>

  <string name="empty"></string>

  <string name="daily_english_url">http://open.iciba.com/dsapi</string>

  <string name="default_daily_en">For without progress there will be stagnation and decay.</string>
  <string name="default_daily_zh">如果没有进步，就会停滞，就会衰败。《哈利波特与凤凰社》</string>
  <string name="default_daily_pic">http://cdn.iciba.com/news/word/2015-06-27.jpg</string>
  <string name="splash_text">by Mislead</string>
  <string name="splash_kanxue">内容来自看雪论坛</string>

  <string name="login_fail_more_than_five">您已经超出了登录失败限制次数，请等待 15 分钟后重试</string>

  <string name="gust_user">游客</string>
  <string name="user_name">用户名</string>
  <string name="user_pwd">用户密码</string>
  <string name="submit">提交</string>
  <string name="login">登录</string>
  <string name="new_post">新帖</string>
  <string name="refresh">刷新</string>
  <string name="logout">退出登录</string>
  <string name="exit">退出应用</string>
  <string name="user_login">用户登录</string>
  <string name="user_info">用户信息</string>
  <string name="about">关于</string>
  <string name="feed_back">反馈问题</string>
  <string name="new_topic">查看新帖</string>
  <string name="titles">论坛主题</string>
  <string name="security_news">安全资讯</string>
  <string name="about_kanxue">看雪论坛</string>
  <string name="about_kanxue_msg">看雪论坛是个软件安全技术交流场所，为安全技术爱好者提供一个技术交流平台和资源，拥有多个以计算机安全技术为主题的版块。\n\n
  看雪软件安全网站一直遵循纯技术主题的发展策略，不但在行业中树立了令人尊敬的专业形象，更使一大批专业人士和专家聚集在这里，构建起了一个围绕软件安全主题的活跃的大社区。</string>
  <string name="about_ikanxue">i看雪</string>
  <string name="about_ikanxue_msg">i看雪是个人根据看雪API开发的第三方Android APP。目的是为了学习和交流Android开发技术。\n\n如有任何需要可以邮箱联系我，邮箱地址：867986737@qq.com。本人十分愿意可以利用空闲为看雪尽一份力。</string>

  <string name="up_load_more">上拉加载更多</string>
  <string name="no_more">暂无更多</string>
  <string name="loading">正在加载...</string>

  <string name="new_post_success">发帖成功</string>
  <string name="post_new_thread">发帖</string>
  <string name="new_post_fail_within_thirty_seconds">禁止三十秒内连续发帖</string>
  <string name="new_post_fail_within_five_minutes">禁止五分钟内发相同贴</string>
  <string name="new_post_fail_not_enough_kx">现金不足, 无法发出高于现金数额的悬赏</string>

  <string name="temporary_limit">临时会员不能在该板块发帖！</string>

  <string name="today">今天</string>
  <string name="select_type">选择话题</string>

  <string name="kx_limit">10 - 100 Kx</string>

  <string name="dark_theme">夜间模式</string>
  <string name="light_theme">日间模式</string>
  <string name="daily_beauty">每日美文</string>
  <string name="my_favor">我的收藏</string>
  <string name="quick_reply">快速回复，不少于6个字</string>
  <string name="confirm">确定</string>
  <string name="cancel">取消</string>
  <string name="download_note">确定要下载“%1$s”？\n\n文件将会下载到SDCard的ikanxue目录下。</string>
  <string name="reply">回复</string>
  <string name="ref_template"><Data><![CDATA[ <div class=\"quote\"><i><i>最初由 <strong>%1$s<\/strong>发布<\/i>:<br \/>\r\n%2$s<\/i><\/div> ]]> </Data></string>
  <string name="reply_with_reference">回复中引用原始信息</string>
  <string name="need_login">该操作需要用户先登录！</string>
  <string name="file_exists">“%1$s”已经存在，是否要重新下载？</string>

  <string-array name="topic_list">
    <item>【求助】</item>
    <item>【原创】</item>
    <item>【推荐】</item>
    <item>【转帖】</item>
    <item>【讨论】</item>
    <item>【下载】</item>
    <item>【分享】</item>
    <item>【注意】</item>
    <item>【翻译】</item>
    <item>【调查】</item>
    <item>【建议】</item>
  </string-array>
</resources>
