<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    >
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_kanxue"
        android:textColor="@color/text_black_1"
        android:textSize="@dimen/text_size_large"
        android:padding="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_kanxue_msg"
        android:textColor="@color/text_black_1"
        android:textSize="@dimen/text_size_normal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ikanxue"
        android:textColor="@color/text_black_1"
        android:textSize="@dimen/text_size_large"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_ikanxue_msg"
        android:textColor="@color/text_black_1"
        android:textSize="@dimen/text_size_normal"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="by Mislead"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_black_2"
        android:textStyle="italic"
        android:gravity="right"
        />
  </LinearLayout>

</ScrollView>