<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NavigationDrawerFragment"
    >
  <LinearLayout
      android:id="@+id/userInfo"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:paddingTop="24dp"
      >

    <com.mislead.circleimageview.lib.CircleImageView
        android:id="@+id/circleIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        app:border_width="1dp"
        />


    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="用户名称"
        android:textColor="@color/text_black_1_dark"
        android:textSize="20sp"
        />

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:paddingLeft="16dp"
      android:paddingRight="16dp"
      android:paddingTop="12dp"
      android:paddingBottom="24dp"
      >

    <TextView
        android:id="@+id/tv_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_black_2_dark"
        android:text="临时用户"
        />

    <TextView
        android:id="@+id/tv_money"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:textSize="@dimen/text_size_normal"
        android:textColor="@color/text_black_2_dark"
        android:text="0 Kx"
        />

  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/text_black_4"
      />

  <LinearLayout
      android:id="@+id/ll_daily"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:paddingBottom="16dp"
      android:gravity="center_vertical"
      android:background="@drawable/drawer_btn_bg"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/ic_daily"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_beauty"
        android:textColor="@color/text_black_2_dark"
        android:textSize="20sp"
        />

  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/text_black_4"
      />

  <LinearLayout
      android:id="@+id/ll_about"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingTop="16dp"
      android:paddingBottom="16dp"
      android:gravity="center_vertical"
      android:background="@drawable/drawer_btn_bg"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/ic_about"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/text_black_2_dark"
        android:textSize="20sp"
        />

  </LinearLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/text_black_4"
      />

  <View
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1.0"
      />

  <LinearLayout
      android:id="@+id/ll_change_theme"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:paddingTop="8dp"
      android:paddingBottom="4dp"
      android:gravity="center_vertical"
      android:background="@drawable/drawer_btn_bg"
      android:orientation="horizontal"
      >

    <ImageView
        android:id="@+id/iv_theme"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/night"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:id="@+id/tv_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dark_theme"
        android:textColor="@color/text_black_2_dark"
        android:textSize="20sp"
        />

  </LinearLayout>

  <LinearLayout
      android:id="@+id/ll_exit"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginBottom="16dp"
      android:paddingTop="4dp"
      android:paddingBottom="8dp"
      android:gravity="center_vertical"
      android:background="@drawable/drawer_btn_bg"
      android:orientation="horizontal"
      >

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@mipmap/ic_exit"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textColor="@color/text_black_2_dark"
        android:textSize="20sp"
        />

  </LinearLayout>

</LinearLayout>