<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ll_item"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/main_bg_color"
    android:gravity="center_vertical"
    android:padding="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <com.mislead.circleimageview.lib.CircleImageView
        android:id="@+id/iv_head"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:scaleType="centerCrop"
        android:layout_margin="4dp"
        android:src="@mipmap/ic_launcher"
        app:border_width="1dp"
        />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_head"
        android:layout_alignTop="@id/iv_head"
        android:textSize="@dimen/text_size_normal"
        android:textColor="?attr/text_color_1"
        android:text="@string/app_name"
        />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/iv_head"
        android:layout_alignBottom="@id/iv_head"
        android:textColor="?attr/text_color_3"
        android:textSize="@dimen/text_size_small"
        android:text="@string/loading"
        />

    <TextView
        android:id="@+id/tv_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@id/iv_head"
        android:textSize="@dimen/text_size_small"
        android:textColor="?attr/text_color_2"
        android:text="@string/app_name"
        />

  </RelativeLayout>

  <View
      android:layout_width="match_parent"
      android:layout_height="1px"
      android:background="@color/text_black_4"
      />

  <TextView
      android:id="@+id/tv_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:textColor="?attr/text_color_1"
      android:textSize="@dimen/text_size_big"
      android:text="@string/titles"
      />

  <TextView
      android:id="@+id/tv_msg"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="?attr/text_color_2"
      android:textSize="@dimen/text_size_normal"
      android:text="@string/titles"
      />

  <LinearLayout
      android:id="@+id/ll_attachment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="8dp"
      android:layout_marginBottom="8dp"

      >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/text_black_4"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:textColor="?attr/text_color_2"
        android:text="附件："
        />

    <LinearLayout
        android:id="@+id/ll_image_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <LinearLayout
        android:id="@+id/ll_other_attachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

  </LinearLayout>

</LinearLayout>